# article-checker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
config/: email.yaml.example  feeds.yaml
scripts/: diagnose.py  run.py  seed_cache.py
src/article_checker/: __init__.py
src/article_checker/models/: __init__.py  paper.py
src/article_checker/services/: __init__.py  author_evaluator.py  cache.py  email_sender.py  gist_store.py  mathml.py
src/article_checker/sources/: __init__.py  arxiv.py  base.py  journal.py
