[project]
name = "article-checker"
version = "0.1.0"
description = "RSS-based academic paper checker with email notifications"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "latex2mathml>=3.77.0",
]

[project.scripts]
article-checker = "article_checker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/article_checker"]
